--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
             <div class="about-content">
                 <div class="about-text">
                     <h3>Timeless Excellence</h3>
-                    <p>At <span class="gold-text">Ayati Developers</span>, we don’t just build houses — we craft homes designed for families to thrive. With a strong presence in premium locations, our projects combine sophisticated design, uncompromising quality, and modern amenities. From spacious layouts to refined finishes, we create spaces where elegance meets convenience.</p>
-                    <p>Our vision is to deliver spaces that balance luxury with practicality, ensuring every person experiences the privacy, comfort, and community they deserve.</p>
+                    <p>At <span class="gold-text">Ayati Developers</span>, we don’t just build houses — we craft homes designed for families to thrive. With our presence in <span class="gold-text">Central Noida</span>, our projects combine sophisticated design, uncompromising quality, and modern amenities. From spacious layouts to refined finishes, we create spaces where elegance meets convenience.</p>
+                    <p>Our vision is to deliver spaces that balance practicality, ensuring every person experiences the privacy, comfort, and community they deserve.</p>
                     <div class="stats">
                         <div class="stat">
                             <h4>1st</h4>
-                            <p>Step Towards Redefining Luxury Spaces</p>
+                            <p>Step Towards Redefining Spaces</p>
                         </div>
                         <div class="stat">
                             <h4>100%</h4>
@@ -82,7 +82,7 @@
                 <div class="about-image">
                     <div class="image-placeholder">
                         <!-- <i class="fas fa-building"></i> -->
-                        <img src="about.png" alt="Ayati Group" class="about-image">
+                        <img src="result.jpeg" alt="Ayati Group" class="about-image">
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
             <div class="section-header">
                 <div class="gold-divider"></div>
                 <h2 class="section-title">Featured Properties</h2>
-                <p class="section-subtitle">Exclusive residences that define luxury living</p>
+                <p class="section-subtitle">Exclusive residences that define living spaces</p>
             </div>
             <div class="properties-grid">
                 <!-- <div class="property-card">
@@ -127,14 +127,14 @@
                             <img src="Aadhya Homes.jpeg" alt="Ayati Group" class="property-image">
                         </div>
                         <div class="property-logo">
-                            <img src="logo.png" alt="Ayati Group" class="property-logo-image">
+                            <img src="adhya_homes.png" alt="Logo of aadhya homes" class="property-logo-image">
                         </div>
                         <div class="property-overlay">
                             <div class="property-location">Sector 73, NOIDA</div>
                         </div>
                     </div>
                     <div class="property-content">
-                        <h3>Aadhya Homes</h3>
+                        <h3>Aadya Homes</h3>
                         <p>Spacious 3BHK independent floors in Sector 73, Noida — thoughtfully designed with modern amenities, and premium construction for a private family lifestyle.</p>
                         <div class="property-details">
                             <span><i class="fas fa-bed"></i> 3 Bedrooms</span>
@@ -155,19 +155,20 @@
                 <div class="property-card">
                     <div class="property-image">
                         <div class="image-placeholder">
-                            <i class="fas fa-home"></i>
+                            <!-- <i class="fas fa-home"></i> -->
+                            <img src="coming_soon.png" alt="Coming soon" class="property-image">
                         </div>
                         <div class="property-logo">
-                            <!-- <img src="logo.png" alt="Ayati Group" class="property-logo-image"> -->
+                            <img src="logo.png" alt="Ayati Group" class="property-logo-image">
                         </div>
                         <div class="property-overlay">
-                            <div class="property-location">Miami Beach, FL</div>
+                            <div class="property-location">Coming soon</div>
                         </div>
                     </div>
                     <div class="property-content">
-                        <h3>Oceanfront Estate</h3>
-                        <p>Stunning beachfront property with private beach access, yacht dock, and tropical landscaping.</p>
-                        <div class="property-details">
+                        <h3>Aadya Residency</h3>
+                        <p>COMING SOON</p>
+                        <!-- <div class="property-details">
                             <span><i class="fas fa-bed"></i> 7 Bedrooms</span>
                             <span><i class="fas fa-bath"></i> 9 Bathrooms</span>
                             <span><i class="fas fa-ruler-combined"></i> 12,000 sq ft</span>
@@ -179,7 +180,7 @@
                             <button class="brochure-btn download-btn" data-brochure-src="Aadya Homes.pdf" data-property="Oceanfront Estate">
                                 <i class="fas fa-download"></i> Download
                             </button>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -191,7 +192,7 @@
         <div class="container">
             <div class="section-header">
                 <div class="gold-divider"></div>
-                <h2 class="section-title">Why Choose Luxury Estates</h2>
+                <h2 class="section-title">Why Choose Ayati Developers</h2>
                 <p class="section-subtitle">Excellence in every detail</p>
             </div>
             <div class="features-grid">
@@ -199,22 +200,70 @@
                     <div class="feature-icon">
                         <i class="fas fa-crown"></i>
                     </div>
-                    <h3>Excellence in Every Detail</h3>
-                    <p>We believe luxury is defined by the little things. From refined design to premium service, we ensure that every interaction reflects sophistication.</p>
+                    <h3>Excellent Quality</h3>
+                    <p>From vastu compliant design to premium construction quality, we ensure that every interaction reflects sophistication.</p>
                 </div>
                 <div class="feature">
                     <div class="feature-icon">
                         <i class="fas fa-fingerprint"></i>
                     </div>
-                    <h3>Tailored Experience</h3>
-                    <p>Every client is unique. We take the time to understand your lifestyle, preferences, and goals to match you with the perfect property.</p>
+                    <h3>Transparent in Every Deal</h3>
+                    <p>We believes in transparency, we never let down our valued customers, by making fake commitments.</p>
                 </div>
                 <div class="feature">
                     <div class="feature-icon">
                         <i class="fas fa-money-bill-wave"></i>
                     </div>
                     <h3>Seamless Financing</h3>
-                    <p>Our trusted banking and financial partners make luxury ownership easier, offering flexible financing solutions tailored to your needs.</p>
+                    <p>Our trusted banking and financial partners make ownership easier, offering flexible financing solutions tailored to your needs.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Finance Available Section -->
+    <section id="finance-available" class="finance-available">
+        <div class="container">
+            <div class="section-header">
+                <div class="gold-divider"></div>
+            </div>
+            <div class="finance-available-content">
+                <h2 class="section-title">Finance Available</h2>
+                <p class="section-subtitle">We have a wide range of finance options available for you.</p>
+            </div>
+            
+            <!-- Logo Carousel -->
+            <div class="logo-carousel-container">
+                <div class="logo-carousel">
+                    <div class="logo-track">
+                        <!-- First set of logos -->
+                        <div class="logo-slide">
+                            <img src="ICICI.svg" alt="ICICI Bank" class="carousel-logo">
+                        </div>
+                        <div class="logo-slide">
+                            <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
+                        </div>
+                        <div class="logo-slide">
+                            <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
+                        </div>
+                        <div class="logo-slide">
+                            <img src="ICICI.svg" alt="ICICI Bank" class="carousel-logo">
+                        </div>
+                        <div class="logo-slide">
+                            <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
+                        </div>
+                        <div class="logo-slide">
+                            <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
+                        </div>
+                        <div class="logo-slide">
+                            <img src="ICICI.svg" alt="ICICI Bank" class="carousel-logo">
+                        </div>
+                        <div class="logo-slide">
+                            <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
+                        </div>
+                        <div class="logo-slide">
+                            <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -274,7 +323,7 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h4>Email</h4>
-                            <p>info@luxuryestates.com</p>
+                            <p>ayatidevelopers@gmail.com</p>
                         </div>
                     </div>
                 </div>
@@ -294,9 +343,9 @@
             <div class="footer-bottom">
                 <p>&copy; 2025 Ayati Developers. All rights reserved.</p>
                 <div class="social-links">
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.instagram.com/ayatigroup/"><i class="fab fa-instagram"></i></a>
+                    <!-- <a href="#"><i class="fab fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a> -->
                 </div>
             </div>
         </div>
