--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                     <div class="logo-track">
                         <!-- First set of logos -->
                         <div class="logo-slide">
-                            <img src="ICICI.svg" alt="ICICI Bank" class="carousel-logo">
+                            <img src="icici.svg" alt="ICICI Bank" class="carousel-logo">
                         </div>
                         <div class="logo-slide">
                             <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
@@ -246,7 +246,7 @@
                             <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
                         </div>
                         <div class="logo-slide">
-                            <img src="ICICI.svg" alt="ICICI Bank" class="carousel-logo">
+                            <img src="icici.svg" alt="ICICI Bank" class="carousel-logo">
                         </div>
                         <div class="logo-slide">
                             <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
@@ -255,7 +255,7 @@
                             <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
                         </div>
                         <div class="logo-slide">
-                            <img src="ICICI.svg" alt="ICICI Bank" class="carousel-logo">
+                            <img src="icici.svg" alt="ICICI Bank" class="carousel-logo">
                         </div>
                         <div class="logo-slide">
                             <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
