--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ayati Group | Nurturing Spaces</title>
+    <title>Ayati Group | Real Estate Developer</title>
     <link rel="stylesheet" href="styles.css?v=2.0">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -846,6 +846,15 @@
                         <div class="logo-slide">
                             <img src="icici.svg" alt="ICICI Bank" class="carousel-logo">
                         </div>
+                        <<div class="logo-slide">
+                            <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
+                        </div>
+                        <div class="logo-slide">
+                            <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
+                        </div>
+                        <!-- <div class="logo-slide">
+                            <img src="icici.svg" alt="ICICI Bank" class="carousel-logo">
+                        </div>
                         <div class="logo-slide">
                             <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
                         </div>
@@ -860,7 +869,7 @@
                         </div>
                         <div class="logo-slide">
                             <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
