--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <!-- Fallback CSS for carousel logos - DOMAIN FIX -->
+    <!-- Fixed Logo Styles -->
     <style>
-        .carousel-logo {
+        .finance-logo {
             max-height: 80px !important;
             max-width: 100% !important;
             height: auto !important;
@@ -19,19 +19,19 @@
             display: block !important;
             margin: 0 auto !important;
         }
-        .carousel-logo[src*="icici"] {
+        .finance-logo[src*="icici"] {
             max-height: 60px !important;
             max-width: 150px !important;
         }
-        .carousel-logo[src*="pirmal"] {
+        .finance-logo[src*="pirmal"] {
             max-height: 70px !important;
             max-width: 160px !important;
         }
-        .carousel-logo[src*="aavas"] {
+        .finance-logo[src*="aavas"] {
             max-height: 65px !important;
             max-width: 140px !important;
         }
-        .logo-slide {
+        .logo-item {
             width: 200px !important;
             height: 120px !important;
             overflow: hidden !important;
@@ -829,47 +829,17 @@
                 <p class="section-subtitle">We have a wide range of finance options available for you.</p>
             </div>
             
-            <!-- Logo Carousel -->
-            <div class="logo-carousel-container">
-                <div class="logo-carousel">
-                    <div class="logo-track">
-                        <!-- First set of logos -->
-                        <div class="logo-slide">
-                            <img src="icici.svg" alt="ICICI Bank" class="carousel-logo">
-                        </div>
-                        <div class="logo-slide">
-                            <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
-                        </div>
-                        <div class="logo-slide">
-                            <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
-                        </div>
-                        <div class="logo-slide">
-                            <img src="icici.svg" alt="ICICI Bank" class="carousel-logo">
-                        </div>
-                        <<div class="logo-slide">
-                            <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
-                        </div>
-                        <div class="logo-slide">
-                            <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
-                        </div>
-                        <!-- <div class="logo-slide">
-                            <img src="icici.svg" alt="ICICI Bank" class="carousel-logo">
-                        </div>
-                        <div class="logo-slide">
-                            <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
-                        </div>
-                        <div class="logo-slide">
-                            <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
-                        </div>
-                        <div class="logo-slide">
-                            <img src="icici.svg" alt="ICICI Bank" class="carousel-logo">
-                        </div>
-                        <div class="logo-slide">
-                            <img src="pirmal.svg" alt="Piramal Finance" class="carousel-logo">
-                        </div>
-                        <div class="logo-slide">
-                            <img src="aavas-logo.png" alt="Aavas" class="carousel-logo">
-                        </div> -->
+            <!-- Fixed Logo Display -->
+            <div class="logo-grid-container">
+                <div class="logo-grid">
+                    <div class="logo-item">
+                        <img src="icici.svg" alt="ICICI Bank" class="finance-logo">
+                    </div>
+                    <div class="logo-item">
+                        <img src="pirmal.svg" alt="Piramal Finance" class="finance-logo">
+                    </div>
+                    <div class="logo-item">
+                        <img src="aavas-logo.png" alt="Aavas" class="finance-logo">
                     </div>
                 </div>
             </div>
