--- a/index.html
+++ b/index.html
@@ -829,17 +829,57 @@
                 <p class="section-subtitle">We have a wide range of finance options available for you.</p>
             </div>
             
-            <!-- Fixed Logo Display -->
-            <div class="logo-grid-container">
-                <div class="logo-grid">
-                    <div class="logo-item">
+            <!-- Auto-playing Carousel Display -->
+            <div class="carousel-container">
+                <div class="carousel-track" id="carousel-track">
+                    <div class="carousel-slide">
                         <img src="icici.svg" alt="ICICI Bank" class="finance-logo">
                     </div>
-                    <div class="logo-item">
+                    <div class="carousel-slide">
                         <img src="pirmal.svg" alt="Piramal Finance" class="finance-logo">
                     </div>
-                    <div class="logo-item">
+                    <div class="carousel-slide">
                         <img src="aavas-logo.png" alt="Aavas" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="adhaar.png" alt="Adhaar" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="aditya birla.jpg" alt="Aditya Birla" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="Bajaj-Finserv-Logo.jpg" alt="Bajaj Finserv" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="fmcg.png" alt="SMFG" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="GIC.png" alt="GIC" class="finance-logo">
+                    </div>
+                    <!-- Duplicate slides for seamless loop -->
+                    <div class="carousel-slide">
+                        <img src="icici.svg" alt="ICICI Bank" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="pirmal.svg" alt="Piramal Finance" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="aavas-logo.png" alt="Aavas" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="adhaar.png" alt="Adhaar" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="aditya birla.jpg" alt="Aditya Birla" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="Bajaj-Finserv-Logo.jpg" alt="Bajaj Finserv" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="fmcg.png" alt="SMFG" class="finance-logo">
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="GIC.png" alt="GIC" class="finance-logo">
                     </div>
                 </div>
             </div>
