--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@
     <script>
         // Initialize EmailJS (replace with your actual Public Key)
         if (window.emailjs && typeof emailjs.init === 'function') {
-            emailjs.init({ publicKey: 'TZfjfDln9TjuLVtzS' });
+            emailjs.init({ publicKey: '000Q39I3ifhYbRgpu' });
         }
     </script>
     <script src="script.js"></script>
