--- a/index.html
+++ b/index.html
@@ -8,38 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <!-- Fixed Logo Styles -->
-    <style>
-        .finance-logo {
-            max-height: 80px !important;
-            max-width: 100% !important;
-            height: auto !important;
-            width: auto !important;
-            object-fit: contain !important;
-            display: block !important;
-            margin: 0 auto !important;
-        }
-        .finance-logo[src*="icici"] {
-            max-height: 60px !important;
-            max-width: 150px !important;
-        }
-        .finance-logo[src*="pirmal"] {
-            max-height: 70px !important;
-            max-width: 160px !important;
-        }
-        .finance-logo[src*="aavas"] {
-            max-height: 65px !important;
-            max-width: 140px !important;
-        }
-        .logo-item {
-            width: 200px !important;
-            height: 120px !important;
-            overflow: hidden !important;
-            display: flex !important;
-            align-items: center !important;
-            justify-content: center !important;
-        }
-    </style>
 </head>
 <body>
     <!-- Navigation -->
@@ -829,57 +797,57 @@
                 <p class="section-subtitle">We have a wide range of finance options available for you.</p>
             </div>
             
-            <!-- Auto-playing Carousel Display -->
-            <div class="carousel-container">
-                <div class="carousel-track" id="carousel-track">
-                    <div class="carousel-slide">
-                        <img src="icici.svg" alt="ICICI Bank" class="finance-logo">
+            <!-- Logo Animation Display -->
+            <div class="logos">
+                <div class="logo_items">
+                    <div class="logo-container">
+                        <img src="icici.svg" alt="ICICI Bank">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="pirmal.svg" alt="Piramal Finance" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="pirmal.svg" alt="Piramal Finance">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="aavas-logo.png" alt="Aavas" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="aavas-logo.png" alt="Aavas">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="adhaar.png" alt="Adhaar" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="adhaar.png" alt="Adhaar">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="aditya birla.jpg" alt="Aditya Birla" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="aditya birla.jpg" alt="Aditya Birla">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="Bajaj-Finserv-Logo.jpg" alt="Bajaj Finserv" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="Bajaj-Finserv-Logo.jpg" alt="Bajaj Finserv">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="fmcg.png" alt="SMFG" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="fmcg.png" alt="SMFG">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="GIC.png" alt="GIC" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="GIC.png" alt="GIC">
                     </div>
-                    <!-- Duplicate slides for seamless loop -->
-                    <div class="carousel-slide">
-                        <img src="icici.svg" alt="ICICI Bank" class="finance-logo">
+                    <!-- Duplicate logos for seamless loop -->
+                    <div class="logo-container">
+                        <img src="icici.svg" alt="ICICI Bank">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="pirmal.svg" alt="Piramal Finance" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="pirmal.svg" alt="Piramal Finance">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="aavas-logo.png" alt="Aavas" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="aavas-logo.png" alt="Aavas">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="adhaar.png" alt="Adhaar" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="adhaar.png" alt="Adhaar">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="aditya birla.jpg" alt="Aditya Birla" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="aditya birla.jpg" alt="Aditya Birla">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="Bajaj-Finserv-Logo.jpg" alt="Bajaj Finserv" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="Bajaj-Finserv-Logo.jpg" alt="Bajaj Finserv">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="fmcg.png" alt="SMFG" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="fmcg.png" alt="SMFG">
                     </div>
-                    <div class="carousel-slide">
-                        <img src="GIC.png" alt="GIC" class="finance-logo">
+                    <div class="logo-container">
+                        <img src="GIC.png" alt="GIC">
                     </div>
                 </div>
             </div>
